# saisei

./: Dockerfile  HANDOFF.md  LICENSE  Makefile  README.md  alembic.ini  claude.md  docker-compose.yml  nginx.conf  pyproject.toml  rxconfig.py
.github/workflows/: ci.yml
app/: __init__.py  app.py
app/backend/: __init__.py  auth.py  graph.py  graph_distress.py  graph_origination.py  graph_servicing.py  identity.py  llm.py  observability.py  secrets.py  state.py
app/backend/agents/: __init__.py  origination_orchestrator.py  saisei_chat.py  turnaround_orchestrator.py
app/backend/analysis/: __init__.py  calibrate_cli.py  claim_grounding.py  coverage.py  debt_capacity.py  evidence.py  fairness_review.py  faithfulness.py  grounding_pipeline.py  node_budgets.py  numeric_preservation.py  pnl_recovery.py  restructure_grounding.py  threshold_calibration.py  uplift_grounding.py
app/backend/api/: __init__.py  distress_runs.py  execution.py  origination_runs.py  runs.py  servicing_runs.py
app/backend/audit/: __init__.py  admin.py  analytics.py  audit_log.py  record.py  signing.py  sink.py  sink_postgres.py
app/backend/export/: __init__.py  _filenames.py  _markdown_docx.py  _markdown_pdf.py  explainability_report.py  fairness_report.py  governing_constants_baseline.json  keikakusho_docx.py  keikakusho_template.py  model_card.py  recovery_xlsx.py
app/backend/nodes/: __init__.py  ews_scoring.py  financial_extraction.py  kaizen_generation.py  keieisha_hosho.py  lead_arranger.py  loan_origination.py  restructure.py  servicing.py  workout.py  writeoff.py
app/backend/nodes/critics/: __init__.py  _persona.py  feasibility.py  guarantor.py  main_bank.py  realism.py  sub_bank.py
app/backend/portfolio/: __init__.py  loan_store_postgres.py  monitor.py  origination_store.py  origination_store_postgres.py  recorder.py  store.py  store_postgres.py
app/backend/prompts/: critic_guarantor.md  critic_main_bank.md  critic_sub_bank.md  extraction_rules.md  feasibility_critic.md  kaizen_templates.md  registry.py
app/backend/tools/: __init__.py  boj_macro.py  core_banking.py  core_banking_client.py  edinet_client.py  embeddings.py  hojin_bango.py  precedent_loader.py  provider.py  resilience.py  retrieval.py  retrieval_ingest.py  shisanhyo_parser.py  tdb_api.py  tdb_client.py
app/backend/tools/fixtures/: __init__.py  aichi_manufacturer.json  kyoto_wc_deficit_co.json  needs_attention_mfg.json  normal_service_co.json  osaka_distressed_mfg.json  rag_seed_corpus.json  thin_margin_trading_co.json
app/backend/trajectory/: __init__.py  export.py  export_cli.py  record.py  recorder.py  store.py  store_postgres.py
app/frontend/: __init__.py  state.py  theme.py
app/frontend/components/: __init__.py  audit_panel.py  avatar.py  data_display.py  ews_dashboard.py  feasibility_panel.py  meeting_panel.py  negotiation_panel.py  origination_panel.py  pnl_bridge.py  portfolio_panel.py  recovery_chart.py  saisei_companion.py  servicing_panel.py  shisanhyo_table.py  shisanhyo_upload.py  workspace_tabs.py
app/frontend/components/charts/: __init__.py
app/frontend/pages/: __init__.py  index.py
app/shared/: __init__.py  constants.py  logging.py  platform.py  secrets.py  settings.py
app/shared/models/: __init__.py  accounting.py  classification.py  loan.py  money.py
assets/fonts/: OFL.txt  README.md
docs/en/: AGENTIC_ONBOARDING.md  AI_ARCHITECTURE.md  BUSINESS_OVERVIEW.md  CONTINUOUS_INTEGRATION.md  DATA_ARCHITECTURE.md  DEMO_TUTORIAL.md  DOMAIN_ONBOARDING.md  LOAN_LIFECYCLE.md  NEXT_STEPS.md  PRODUCT_MANIFEST.md  ROADMAP.md
docs/ja/: AIアーキテクチャ.md  エンジニアリング規約.md  エージェント入門.md  デモチュートリアル.md  データアーキテクチャ.md  ドメイン入門.md  ロードマップ.md  今後のステップ.md  引き継ぎ.md  説明.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 20240101_0001_initial_schema.py  20240102_0002_loan_events.py
scripts/: init_pgvector.sql  setup_env.sh
tests/: __init__.py  _bare_state.py  test_accounting.py  test_api_auth.py  test_api_origination.py  test_api_runs.py  test_api_runs_async.py  test_api_runs_async_idempotency.py  test_api_servicing.py  test_audit_admin.py  test_audit_analytics.py  test_audit_cross_thread_query.py  test_audit_log.py  test_audit_postgres.py  test_audit_record.py  test_audit_signing.py  test_audit_spine_invariance.py  test_auth_oidc.py  test_borrower_tab_routes.py  test_burden_sharing_stakes.py  test_calibrate_cli.py  test_charts_primitives.py  test_claim_grounding.py  test_claim_grounding_parity.py  test_claim_grounding_pipeline.py  test_classifier.py  test_companion_audit.py  test_companion_llm_prose.py  test_constants_governance.py  test_core_banking_edinet_clients.py  test_core_banking_guard_periods.py  test_coverage.py  test_critic_persona.py  test_critic_personas.py  test_critics.py  test_debt_capacity.py  test_embeddings.py  test_embeddings_remote_dim.py  test_ews_explainability.py  test_ews_zero_sales.py  (+108 more)
tests/eval/: __init__.py  golden_dataset.py  test_eval_gate.py  test_golden_spine.py  test_numeric_preservation.py
tests/eval/online/: __init__.py  test_advisory_eval.py  test_polish_judge.py
